Add credentials as json to POST /users response header
